test/float_range_endpoints.rb.expected
303.2
908.9
nil
1.5
9.5
true
3.0
1.0
2.0
2
3.0
true
false
false
true
1.0..3.0
"1.0...3.0"
"TypeError: can't iterate from Float"
TypeError: cannot exclude non Integer end value
ArgumentError: cannot clamp with an exclusive range
[1.0, 1.5, 2.0, 2.5, 3.0]
"in"
"out"
"out"
"out"
false
true
ArgumentError: min argument must be less than or equal to max argument
ArgumentError: min argument must be less than or equal to max argument
ArgumentError: invalid argument - 3.0..1.0
ArgumentError: invalid argument - 3.0..1.0
nil
nil
Float
